org.mmisw.vine Vocabulary INtegration Environment II
Carlos Rueda - MMI / MBARI

ChangeLog

2008-12-02
	- Included GWT code from a preliminary exercise to emulate standalone GUI.
	  I will use this as a basis to define the core functionality.
	- Current set of relations is fixed but of course the new design should
	  allow a more flexible mechanism to specify the relations and associated
	  information (icons, rules, tooltips, etc).
	
	
2008-11-26  
	- (Very) preliminary set-up of this project